--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ PRIMARY_DB_BUNDLEVERSION=8.0.30
 PRIMARY_DB_DRIVER=MySQL
 PRIMARY_DB_HOST=127.0.0.1
 PRIMARY_DB_PORT=3306
-PRIMARY_DB_DATABASE=personal_resources
-PRIMARY_DB_USER=root
-PRIMARY_DB_PASSWORD=TEST2
+PRIMARY_DB_DATABASE=
+PRIMARY_DB_USER=
+PRIMARY_DB_PASSWORD=
 
 # Secondary Database Information
 SECONDARY_DB_1_CONNECTIONSTRING=jdbc:mysql://127.0.0.1:3306/coldbox?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useLegacyDatetimeCode=true&allowPublicKeyRetrieval=true
@@ -21,9 +21,9 @@ SECONDARY_DB_1_BUNDLEVERSION=8.0.30
 SECONDARY_DB_1_DRIVER=MySQL
 SECONDARY_DB_1_HOST=127.0.0.1
 SECONDARY_DB_1_PORT=3306
-SECONDARY_DB_1_DATABASE=developer_resources
-SECONDARY_DB_1_USER=root
-SECONDARY_DB_1_PASSWORD=TEST2
+SECONDARY_DB_1_DATABASE=
+SECONDARY_DB_1_USER=
+SECONDARY_DB_1_PASSWORD=
 
 # JWT Information
 JWT_SECRET=
